--- a/documents.html
+++ b/documents.html
@@ -325,170 +325,138 @@
 									<label for="input_docs" class="btn">Загрузить документ</label>
 									<input type="file" class="d-none" id="input_docs">
 								</div>
-								<div class="documents_widget_item signed">
+								<div class="documents_widget_item ready">
 									<div class="documents_widget_item_meta d-flex justify-content-between align-items-center">
 										<div>
 											<div class="bold">Договор №54242</div>
 											<div class="less light">от 21.10.2023</div>
 										</div>
-										<div>
-											<div class="less light">Поставщик</div>
-											<div class="small">АО "Амоний"</div>
+										<div class="d-flex justify-content-between relative">
+											<div>
+												<div class="less light">Поставщик</div>
+												<div class="small">АО "Амоний"</div>
+											</div>
+											<div class="d-flex align-items-center less download_docs_choice">
+												<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+													<g clip-path="url(#clip0_348_609)">
+													<path d="M16.25 15V17.5H3.75V15H2.5V17.5C2.5 17.8315 2.6317 18.1495 2.86612 18.3839C3.10054 18.6183 3.41848 18.75 3.75 18.75H16.25C16.5815 18.75 16.8995 18.6183 17.1339 18.3839C17.3683 18.1495 17.5 17.8315 17.5 17.5V15H16.25Z" fill="#3C3C3C"/>
+													<path d="M16.25 8.75L15.3687 7.86875L10.625 12.6062V1.25H9.375V12.6062L4.63125 7.86875L3.75 8.75L10 15L16.25 8.75Z" fill="#3C3C3C"/>
+													</g>
+													<defs>
+													<clipPath id="clip0_348_609">
+													<rect width="20" height="20" fill="white"/>
+													</clipPath>
+													</defs>
+													</svg>
+												<span>Скачать</span>
+											</div>
+											<div class="droplist_docs d-flex flex-column">
+												<a href="#" class="link justify-content-start">
+													<span>DOCX</span>
+												</a>
+												<a href="#" class="link justify-content-start">
+													<span>PDF</span>
+												</a>
+											</div>
 										</div>
 									</div>
 									<div class="documents_widget_item_additional d-flex justify-content-between align-items-center">
 										<div class="d-flex align-items-center documents_widget_status">
-											<div class="documents_widget_item_icon">
-												<svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-													<g clip-path="url(#clip0_1188_6924)">
-														<path
-															d="M7.3125 13.5L2.25 8.43746L3.04537 7.64209L7.3125 11.9087L14.9546 4.26709L15.75 5.06246L7.3125 13.5Z"
-															fill="white" />
-													</g>
-													<defs>
-														<clipPath id="clip0_1188_6924">
-															<rect width="18" height="18" fill="white" />
-														</clipPath>
-													</defs>
-												</svg>
-											</div>
-											<span class="small">Подписан</span>
-											<div class="droplist_docs d-flex flex-column">
-												<a href="#" class="link underline justify-content-start">
-													<svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-														<g clip-path="url(#clip0_1188_6941)">
-															<path
-																d="M12.85 4.65L9.35 1.15C9.25 1.05 9.15 1 9 1H4C3.45 1 3 1.45 3 2V14C3 14.55 3.45 15 4 15H12C12.55 15 13 14.55 13 14V5C13 4.85 12.95 4.75 12.85 4.65ZM9 2.2L11.8 5H9V2.2ZM12 14H4V2H8V5C8 5.55 8.45 6 9 6H12V14Z"
-																fill="#3C3C3C" />
-															<path d="M11 11H5V12H11V11Z" fill="#3C3C3C" />
-															<path d="M11 8H5V9H11V8Z" fill="#3C3C3C" />
-														</g>
-														<defs>
-															<clipPath id="clip0_1188_6941">
-																<rect width="16" height="16" fill="white" />
-															</clipPath>
-														</defs>
-													</svg>
-													<span>Спецификация</span>
-												</a>
-												<a href="#" class="link underline justify-content-start">
-													<svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-														<g clip-path="url(#clip0_1188_6941)">
-															<path
-																d="M12.85 4.65L9.35 1.15C9.25 1.05 9.15 1 9 1H4C3.45 1 3 1.45 3 2V14C3 14.55 3.45 15 4 15H12C12.55 15 13 14.55 13 14V5C13 4.85 12.95 4.75 12.85 4.65ZM9 2.2L11.8 5H9V2.2ZM12 14H4V2H8V5C8 5.55 8.45 6 9 6H12V14Z"
-																fill="#3C3C3C" />
-															<path d="M11 11H5V12H11V11Z" fill="#3C3C3C" />
-															<path d="M11 8H5V9H11V8Z" fill="#3C3C3C" />
-														</g>
-														<defs>
-															<clipPath id="clip0_1188_6941">
-																<rect width="16" height="16" fill="white" />
-															</clipPath>
-														</defs>
-													</svg>
-													<span>Дополнительное соглашение</span>
-												</a>
+											<div class="badget badget_lg badget_check">
+												<span>
+													Подписан
+												</span>
 											</div>
 										</div>
-										<div class="d-flex align-items-center documents_widget_links">
-											<a href="#" class="link underline">
-												<svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-													<g clip-path="url(#clip0_1188_6941)">
-														<path
-															d="M12.85 4.65L9.35 1.15C9.25 1.05 9.15 1 9 1H4C3.45 1 3 1.45 3 2V14C3 14.55 3.45 15 4 15H12C12.55 15 13 14.55 13 14V5C13 4.85 12.95 4.75 12.85 4.65ZM9 2.2L11.8 5H9V2.2ZM12 14H4V2H8V5C8 5.55 8.45 6 9 6H12V14Z"
-															fill="#3C3C3C" />
-														<path d="M11 11H5V12H11V11Z" fill="#3C3C3C" />
-														<path d="M11 8H5V9H11V8Z" fill="#3C3C3C" />
-													</g>
-													<defs>
-														<clipPath id="clip0_1188_6941">
-															<rect width="16" height="16" fill="white" />
-														</clipPath>
-													</defs>
-												</svg>
-												<span>Скачать в PDF</span>
+										<div class="d-flex align-items-center justify-content-end">
+											<div class="less d-flex align-items-center documents_download_toggle">
+												<img src="images/icons/angle-down.svg" alt="">
+												<span>Документы</span>
+												<div class="docs_count">2</div>
+											</div>
+										</div>
+									</div>
+									<div class="documents_download">
+										<div class="documents_download_item d-flex align-items-center justify-content-between">
+											<div class="small">Приложение 1</div>
+											<a href="#" class="d-flex less align-items-center justify-content-end link">
+												<img src="images/icons/download.svg" alt="">
+												<span>Скачать</span>
 											</a>
-											<a href="#" class="link underline">
-												<svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-													<g clip-path="url(#clip0_1188_6941)">
-														<path
-															d="M12.85 4.65L9.35 1.15C9.25 1.05 9.15 1 9 1H4C3.45 1 3 1.45 3 2V14C3 14.55 3.45 15 4 15H12C12.55 15 13 14.55 13 14V5C13 4.85 12.95 4.75 12.85 4.65ZM9 2.2L11.8 5H9V2.2ZM12 14H4V2H8V5C8 5.55 8.45 6 9 6H12V14Z"
-															fill="#3C3C3C" />
-														<path d="M11 11H5V12H11V11Z" fill="#3C3C3C" />
-														<path d="M11 8H5V9H11V8Z" fill="#3C3C3C" />
-													</g>
-													<defs>
-														<clipPath id="clip0_1188_6941">
-															<rect width="16" height="16" fill="white" />
-														</clipPath>
-													</defs>
-												</svg>
-												<span>Скачать в DOCX</span>
+										</div>
+										<div class="documents_download_item d-flex align-items-center justify-content-between">
+											<div class="small">Спецификация 26</div>
+											<a href="#" class="d-flex less align-items-center justify-content-end link">
+												<img src="images/icons/download.svg" alt="">
+												<span>Скачать</span>
 											</a>
 										</div>
 									</div>
 								</div>
-								<div class="documents_widget_item">
+								<div class="documents_widget_item ready">
 									<div class="documents_widget_item_meta d-flex justify-content-between align-items-center">
 										<div>
 											<div class="bold">Договор №54242</div>
 											<div class="less light">от 21.10.2023</div>
 										</div>
-										<div>
-											<div class="less light">Поставщик</div>
-											<div class="small">АО "Амоний"</div>
+										<div class="d-flex justify-content-between relative">
+											<div>
+												<div class="less light">Поставщик</div>
+												<div class="small">АО "Амоний"</div>
+											</div>
+											<div class="d-flex align-items-center less download_docs_choice">
+												<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+													<g clip-path="url(#clip0_348_609)">
+													<path d="M16.25 15V17.5H3.75V15H2.5V17.5C2.5 17.8315 2.6317 18.1495 2.86612 18.3839C3.10054 18.6183 3.41848 18.75 3.75 18.75H16.25C16.5815 18.75 16.8995 18.6183 17.1339 18.3839C17.3683 18.1495 17.5 17.8315 17.5 17.5V15H16.25Z" fill="#3C3C3C"/>
+													<path d="M16.25 8.75L15.3687 7.86875L10.625 12.6062V1.25H9.375V12.6062L4.63125 7.86875L3.75 8.75L10 15L16.25 8.75Z" fill="#3C3C3C"/>
+													</g>
+													<defs>
+													<clipPath id="clip0_348_609">
+													<rect width="20" height="20" fill="white"/>
+													</clipPath>
+													</defs>
+													</svg>
+												<span>Скачать</span>
+											</div>
+											<div class="droplist_docs d-flex flex-column">
+												<a href="#" class="link justify-content-start">
+													<span>DOCX</span>
+												</a>
+												<a href="#" class="link justify-content-start">
+													<span>PDF</span>
+												</a>
+											</div>
 										</div>
 									</div>
 									<div class="documents_widget_item_additional d-flex justify-content-between align-items-center">
 										<div class="d-flex align-items-center documents_widget_status">
-											<div class="documents_widget_item_icon">
-												<svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-													<g clip-path="url(#clip0_1257_5288)">
-														<path d="M9.79543 9L14.625 4.17043L13.8296 3.375L9 8.20457L4.17054 3.375L3.375 4.17043L8.20457 9L3.375 13.8296L4.17054 14.625L9 9.79543L13.8296 14.625L14.625 13.8296L9.79543 9Z" fill="white" />
-													</g>
-													<defs>
-														<clipPath id="clip0_1257_5288">
-															<rect width="18" height="18" fill="white" />
-														</clipPath>
-													</defs>
-												</svg>
+											<div class="badget badget_lg badget_check">
+												<span>
+													Подписан
+												</span>
 											</div>
-											<span class="small">Не подписан</span>
 										</div>
-										<div class="d-flex align-items-center documents_widget_links">
-											<a href="#" class="link underline">
-												<svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-													<g clip-path="url(#clip0_1188_6941)">
-														<path
-															d="M12.85 4.65L9.35 1.15C9.25 1.05 9.15 1 9 1H4C3.45 1 3 1.45 3 2V14C3 14.55 3.45 15 4 15H12C12.55 15 13 14.55 13 14V5C13 4.85 12.95 4.75 12.85 4.65ZM9 2.2L11.8 5H9V2.2ZM12 14H4V2H8V5C8 5.55 8.45 6 9 6H12V14Z"
-															fill="#3C3C3C" />
-														<path d="M11 11H5V12H11V11Z" fill="#3C3C3C" />
-														<path d="M11 8H5V9H11V8Z" fill="#3C3C3C" />
-													</g>
-													<defs>
-														<clipPath id="clip0_1188_6941">
-															<rect width="16" height="16" fill="white" />
-														</clipPath>
-													</defs>
-												</svg>
-												<span>Скачать в PDF</span>
+										<div class="d-flex align-items-center justify-content-end">
+											<div class="less d-flex align-items-center documents_download_toggle">
+												<img src="images/icons/angle-down.svg" alt="">
+												<span>Документы</span>
+												<div class="docs_count">2</div>
+											</div>
+										</div>
+									</div>
+									<div class="documents_download">
+										<div class="documents_download_item d-flex align-items-center justify-content-between">
+											<div class="small">Приложение 1</div>
+											<a href="#" class="d-flex less align-items-center justify-content-end link">
+												<img src="images/icons/download.svg" alt="">
+												<span>Скачать</span>
 											</a>
-											<a href="#" class="link underline">
-												<svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-													<g clip-path="url(#clip0_1188_6941)">
-														<path
-															d="M12.85 4.65L9.35 1.15C9.25 1.05 9.15 1 9 1H4C3.45 1 3 1.45 3 2V14C3 14.55 3.45 15 4 15H12C12.55 15 13 14.55 13 14V5C13 4.85 12.95 4.75 12.85 4.65ZM9 2.2L11.8 5H9V2.2ZM12 14H4V2H8V5C8 5.55 8.45 6 9 6H12V14Z"
-															fill="#3C3C3C" />
-														<path d="M11 11H5V12H11V11Z" fill="#3C3C3C" />
-														<path d="M11 8H5V9H11V8Z" fill="#3C3C3C" />
-													</g>
-													<defs>
-														<clipPath id="clip0_1188_6941">
-															<rect width="16" height="16" fill="white" />
-														</clipPath>
-													</defs>
-												</svg>
-												<span>Скачать в DOCX</span>
+										</div>
+										<div class="documents_download_item d-flex align-items-center justify-content-between">
+											<div class="small">Спецификация 26</div>
+											<a href="#" class="d-flex less align-items-center justify-content-end link">
+												<img src="images/icons/download.svg" alt="">
+												<span>Скачать</span>
 											</a>
 										</div>
 									</div>
@@ -922,7 +890,9 @@
 							<label for="product_send">Выберите продукцию</label>
 							<select name="" id="product_send" class="js-select-single">
 								<option value="Селитра аммиачная марки Б - АО “Аммоний”">Селитра аммиачная марки Б - АО “Аммоний”</option>
-								<option value="Селитра аммиачная марки Б - АО “Аммоний”">Селитра аммиачная марки С - АО “Аммоний”</option>
+								<option value="">Карбамид марка Б</option>
+											<option value="">Смесь карбамидно-аммиачная КАС-32</option>
+											<option value="">Сульфат аммония</option>
 							</select>
 						</div>
 						<div class="form-group form-group-row d-flex align-items-center">
@@ -1006,7 +976,7 @@
 									<input type="date" name="" id="current" disabled>
 								</div>
 								<div class="form-group mt-0">
-									<label for="">Дата окончания периода поставкии</label>
+									<label for="">Дата окончания периода поставки</label>
 									<input type="date" name="" id="4" disabled  style="border-left: none;">
 								</div>
 							</div>
