--- a/password.html
+++ b/password.html
@@ -377,7 +377,9 @@
 						<label for="product_send">Выберите продукцию</label>
 						<select name="" id="product_send" class="js-select-single">
 							<option value="Селитра аммиачная марки Б - АО “Аммоний”">Селитра аммиачная марки Б - АО “Аммоний”</option>
-							<option value="Селитра аммиачная марки Б - АО “Аммоний”">Селитра аммиачная марки С - АО “Аммоний”</option>
+							<option value="">Карбамид марка Б</option>
+											<option value="">Смесь карбамидно-аммиачная КАС-32</option>
+											<option value="">Сульфат аммония</option>
 						</select>
 					</div>
 					<div class="form-group form-group-row d-flex align-items-center">
@@ -461,7 +463,7 @@
 								<input type="date" name="" id="current" disabled>
 							</div>
 							<div class="form-group mt-0">
-								<label for="">Дата окончания периода поставкии</label>
+								<label for="">Дата окончания периода поставки</label>
 								<input type="date" name="" id="4" disabled  style="border-left: none;">
 							</div>
 						</div>
