--- a/verification.html
+++ b/verification.html
@@ -167,7 +167,7 @@
 					<div class="main_widget">
 						<form class="verification">
 							<fieldset data-field="Шаг 1">
-								<div class="three mb-5">Правовая информация и тип реализации</div>
+								<div class="three mb-5">Правовая форма</div>
 								<div class="small mb-2">Выберите правовую форму</div>
 								<input type="hidden" name="company_type" value="Юридическое лицо">
 								<div class="d-flex justify-content-between">
@@ -431,7 +431,9 @@
 						<label for="product_send">Выберите продукцию</label>
 						<select name="" id="product_send" class="js-select-single">
 							<option value="Селитра аммиачная марки Б - АО “Аммоний”">Селитра аммиачная марки Б - АО “Аммоний”</option>
-							<option value="Селитра аммиачная марки Б - АО “Аммоний”">Селитра аммиачная марки С - АО “Аммоний”</option>
+							<option value="">Карбамид марка Б</option>
+											<option value="">Смесь карбамидно-аммиачная КАС-32</option>
+											<option value="">Сульфат аммония</option>
 						</select>
 					</div>
 					<div class="form-group form-group-row d-flex align-items-center">
