--- a/catalog.html
+++ b/catalog.html
@@ -121,6 +121,8 @@
 								<select name="" id="" class="js-select-single">
 									<option value="" selected>Все производители</option>
 									<option value="">АО "Аммоний"</option>
+									<option value="">АО "Мелеузовские минеральные удобрения"</option>
+									<option value="">КАО "АЗОТ"</option>
 								</select>
 								<div class="input_search">
 									<input type="search" name="search_applications" placeholder="Поиск по номеру заказа">
@@ -299,7 +301,9 @@
 						<label for="product_send">Выберите продукцию</label>
 						<select name="" id="product_send" class="js-select-single">
 							<option value="Селитра аммиачная марки Б - АО “Аммоний”">Селитра аммиачная марки Б - АО “Аммоний”</option>
-							<option value="Селитра аммиачная марки Б - АО “Аммоний”">Селитра аммиачная марки С - АО “Аммоний”</option>
+							<option value="">Карбамид марка Б</option>
+											<option value="">Смесь карбамидно-аммиачная КАС-32</option>
+											<option value="">Сульфат аммония</option>
 						</select>
 					</div>
 					<div class="form-group form-group-row d-flex align-items-center">
@@ -375,7 +379,7 @@
 								<input type="date" name="" id="current" disabled>
 							</div>
 							<div class="form-group mt-0">
-								<label for="">Дата окончания периода поставкии</label>
+								<label for="">Дата окончания периода поставки</label>
 								<input type="date" name="" id="4" disabled  style="border-left: none;">
 							</div>
 						</div>
