--- a/faq.html
+++ b/faq.html
@@ -292,7 +292,9 @@
 						<label for="product_send">Выберите продукцию</label>
 						<select name="" id="product_send" class="js-select-single">
 							<option value="Селитра аммиачная марки Б - АО “Аммоний”">Селитра аммиачная марки Б - АО “Аммоний”</option>
-							<option value="Селитра аммиачная марки Б - АО “Аммоний”">Селитра аммиачная марки С - АО “Аммоний”</option>
+							<option value="">Карбамид марка Б</option>
+											<option value="">Смесь карбамидно-аммиачная КАС-32</option>
+											<option value="">Сульфат аммония</option>
 						</select>
 					</div>
 					<div class="form-group form-group-row d-flex align-items-center">
